--- a/.github/update_slow_tests.yml
+++ b/.github/update_slow_tests.yml
@@ -1,5 +1,10 @@
 name: Update slow tests
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
   schedule:
     # Every day at noon
     - cron: "39 * * * *"
