--- a/.github/workflows/update_slow_tests.yml
+++ b/.github/workflows/update_slow_tests.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           sudo apt-get install python3-dev python3-pip python3-venv python3-wheel -y
           pip install wheel typing_extensions boto3
-          python tools/export_slow_tests.py -f .pytorch-slow-tests
+          python3 tools/export_slow_tests.py -f .pytorch-slow-tests
 
       - name: Push file to test-infra repository
         uses: dmnemec/copy_file_to_another_repo_action@5f40763ccee2954067adba7fb8326e4df33bcb92
