--- a/.github/workflows/update_slow_tests.yml
+++ b/.github/workflows/update_slow_tests.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: pytorch/pytorch
+          fetch-depth: 0
 
       - name: Install dependencies
         # mypy and boto3 versions copied from
@@ -35,7 +36,7 @@ jobs:
           pip install boto3==1.16.34 mypy==0.770
 
       - name: Generate new slow test stats
-        run: python3 tools/export_slow_tests.py -f .pytorch-slow-tests
+        run: python tools/export_slow_tests.py -f .pytorch-slow-tests
 
       - name: Push file to test-infra repository
         uses: dmnemec/copy_file_to_another_repo_action@5f40763ccee2954067adba7fb8326e4df33bcb92
