--- a/.github/workflows/update_slow_tests.yml
+++ b/.github/workflows/update_slow_tests.yml
@@ -1,4 +1,5 @@
 name: Update slow tests
+
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
@@ -22,7 +23,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: pytorch/pytorch
-          fetch-depth: 0
 
       - name: Install dependencies
         # mypy and boto3 versions copied from
@@ -33,7 +33,10 @@ jobs:
           pip install boto3==1.16.34 mypy==0.770
 
       - name: Generate new slow test stats
-        run: python tools/export_slow_tests.py -f .pytorch-slow-tests
+        run: |
+          printf "import os\ntry:\n\tuser_paths = os.environ['PYTHONPATH'].split(os.pathsep)\nexcept KeyError:\n\tuser_paths = []\nprint(user_paths)" | python
+          cd tools
+          python export_slow_tests.py -f .pytorch-slow-tests
 
       - name: Push file to test-infra repository
         uses: dmnemec/copy_file_to_another_repo_action@5f40763ccee2954067adba7fb8326e4df33bcb92
