--- a/.github/workflows/update_slow_tests.yml
+++ b/.github/workflows/update_slow_tests.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: pytorch/pytorch
+          fetch-depth: 0 # deep clone, to allow us to use git log
 
       - name: Install dependencies
         # mypy and boto3 versions copied from
@@ -34,8 +35,8 @@ jobs:
 
       - name: Generate new slow test stats
         run: |
-          printf "import os\ntry:\n\tuser_paths = os.environ['PYTHONPATH'].split(os.pathsep)\nexcept KeyError:\n\tuser_paths = []\nprint(user_paths)" | python
           export PYTHONPATH=$PWD
+          printf "import os\ntry:\n\tuser_paths = os.environ['PYTHONPATH'].split(os.pathsep)\nexcept KeyError:\n\tuser_paths = []\nprint(user_paths)" | python
           python tools/export_slow_tests.py -f .pytorch-slow-tests
 
       - name: Push file to test-infra repository
