--- a/.github/workflows/test_tools.yml
+++ b/.github/workflows/test_tools.yml
@@ -1,10 +1,8 @@
 name: Test tools
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  # Have the ability to trigger this job manually through the API
+  workflow_dispatch:
 
 jobs:
   test:
