--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -4,6 +4,8 @@ on:
   schedule:
     # every minute
     - cron:  '*/1 * * * *'
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   build:
