--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -16,11 +16,11 @@ jobs:
         ISSUE_NUMBER=${{ github.event.issue.number }}
         OWNER="${{ github.repository_owner }}"
         REPO="${{ github.repository }}"
-        if [[ ${TITLE,,} =~ *rocm* ]]; then
+        if [[ ${TITLE,,} == *rocm* ]]; then
           curl \
             -X POST \
             -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/$OWNER/$REPO/issues/$ISSUE_NUMBER/labels \
+            https://api.github.com/repos/${OWNER}/${REPO}/issues/${ISSUE_NUMBER}/labels \
             -d '{"labels":["ROCm"]}'
         fi
       env:
