--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -19,7 +19,7 @@ jobs:
         if [[ ${TITLE,,} == *rocm* ]]; then
           curl \
             -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${GITHUB_TOKEN}" \
             https://api.github.com/repos/${OWNER}/${REPO}/issues/${ISSUE_NUMBER}/labels \
             -d '{"labels":["ROCm"]}'
         fi
