--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -7,16 +7,28 @@ on:
     types: [edited, opened, synchronize, reopened]
 
 jobs:
-  auto-label-issues:
+  auto-label-rocm:
     runs-on: ubuntu-18.04
     steps:
+    - name: Retrieve information
+      id: vars
+      run: |
+        set -eux
+        IS_PR=${{ github.event.issue.pull_request }}
+        if [[ -n "${IS_PR}" ]]; then
+          TITLE="${{ github.event.issue.pull_request.title }}"
+          ISSUE_NUMBER=${{ github.event.issue.pull_request.number }}
+        else
+          TITLE="${{ github.event.issue.title }}"
+          ISSUE_NUMBER=${{ github.event.issue.number }}
+        fi
+        echo ::set-output name=TITLE::${TITLE}
+        echo ::set-output name=ISSUE_NUMBER::${ISSUE_NUMBER}
+        echo ::set-output name=OWNER::"${{ github.repository_owner }}"
+        echo ::set-output name=REPO::"${{ github.event.repository.name }}"
     - name: Auto-label ROCm
       run: |
         set -eux
-        TITLE="${{ github.event.issue.title }}"
-        ISSUE_NUMBER=${{ github.event.issue.number }}
-        OWNER="${{ github.repository_owner }}"
-        REPO="${{ github.event.repository.name }}"
         if [[ ${TITLE,,} == *rocm* ]]; then
           curl \
             -X POST \
@@ -26,3 +38,7 @@ jobs:
         fi
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        TITLE: ${{ steps.vars.outputs.TITLE }}
+        ISSUE_NUMBER: ${{ steps.vars.outputs.ISSUE_NUMBER }}
+        OWNER: ${{ steps.vars.outputs.OWNER }}
+        REPO: ${{ steps.vars.outputs.REPO }}
