--- a/.github/workflows/auto_label.yml
+++ b/.github/workflows/auto_label.yml
@@ -14,7 +14,7 @@ jobs:
       id: vars
       run: |
         set -eux
-        if [[ -n "${IS_PR}" ]]; then
+        if [[ "${{ github.event_name }}" == "pull_request_target" ]]; then
           TITLE="${PR_TITLE}"
           ISSUE_NUMBER="${PR_NUMBER}"
         else
@@ -24,11 +24,10 @@ jobs:
         echo ::set-output name=TITLE::"${TITLE}"
         echo ::set-output name=ISSUE_NUMBER::"${ISSUE_NUMBER}"
       env:
-        IS_PR: "${{ github.event.pull_request }}"
-        PR_TITLE: "${{ github.event.pull_request.title }}"
-        PR_NUMBER: "${{ github.event.pull_request.number }}"
-        ISSUE_TITLE: "${{ github.event.issue.title }}"
-        ISSUE_NUMBER: "${{ github.event.issue.number }}"
+        PR_TITLE: ${{ github.event.pull_request.title }}
+        PR_NUMBER: ${{ github.event.pull_request.number }}
+        ISSUE_TITLE: ${{ github.event.issue.title }}
+        ISSUE_NUMBER: ${{ github.event.issue.number }}
     - name: Auto-label ROCm
       run: |
         set -eux
@@ -40,8 +39,8 @@ jobs:
             -d '{"labels":["ROCm"]}'
         fi
       env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        TITLE: "${{ steps.vars.outputs.TITLE }}"
-        ISSUE_NUMBER: "${{ steps.vars.outputs.ISSUE_NUMBER }}"
-        OWNER: "${{ github.repository_owner }}"
-        REPO: "${{ github.event.repository.name }}"
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        TITLE: ${{ steps.vars.outputs.TITLE }}
+        ISSUE_NUMBER: ${{ steps.vars.outputs.ISSUE_NUMBER }}
+        OWNER: ${{ github.repository_owner }}
+        REPO: ${{ github.event.repository.name }}
