--- a/.github/workflows/update_disabled_tests.yml
+++ b/.github/workflows/update_disabled_tests.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Generate new disabled test list
         run: |
+          # score changes every request, so we strip it out to avoid creating a commit every time we query.
           curl 'https://api.github.com/search/issues?q=is%3Aissue+is%3Aopen+label%3A%22module%3A+flaky-tests%22+repo:pytorch/pytorch+in%3Atitle+DISABLED' \
           | sed 's/"score": [0-9\.]*/"score": 0.0/g' > .pytorch-disabled-tests
       - name: Push file to test-infra repository
