--- a/.github/workflows/update_disabled_tests.yml
+++ b/.github/workflows/update_disabled_tests.yml
@@ -14,16 +14,16 @@ jobs:
         run: |
           # score changes every request, so we strip it out to avoid creating a commit every time we query.
           curl 'https://api.github.com/search/issues?q=is%3Aissue+is%3Aopen+label%3A%22module%3A+flaky-tests%22+repo:pytorch/pytorch+in%3Atitle+DISABLED' \
-          | sed 's/"score": [0-9\.]*/"score": 0.0/g' > .pytorch-disabled-tests
+          | sed 's/"score": [0-9\.]*/"score": 0.0/g' > disabled-tests.json
       - name: Push file to test-infra repository
         uses: dmnemec/copy_file_to_another_repo_action@5f40763ccee2954067adba7fb8326e4df33bcb92
         env:
-           API_TOKEN_GITHUB: ${{ secrets.TEST_INFRA_TOKEN }}
+           API_TOKEN_GITHUB: ${{ secrets.TEST_INFRA_PAT }}
         with:
-          source_file: '.pytorch-disabled-tests'
-          destination_repo: 'janeyx99/test-infra'
+          source_file: 'disabled-tests.json'
+          destination_repo: 'pytorch/test-infra'
           destination_folder: 'stats'
-          destination_branch: main
+          destination_branch: master
           user_email: 'test-infra@pytorch.org'
           user_name: 'Pytorch Test Infra'
           commit_message: 'Updating disabled tests stats'
